<resources>
    <string name="app_name">"Sapper"</string>
    <string name="free_cell">"Free cell: "</string>
    <string name="begin_game">"GO!"</string>
    <string name="count_rows">"rows: "</string>
    <string name="count_columns">"columns: "</string>
    <string name="count_mins">"mins: "</string>
    <string name="show_seconds">"show seconds: "</string>
    <string name="victory">"Victory"</string>
    <string name="defeat">"Defeat"</string>
    <string name="percent">"%"</string>
    <string name="default_value">"50"</string>
    <string name="menu">"Menu"</string>
    <string name="again">"Again"</string>
    <string name="min_open">"💥"</string>
    <string name="min_close">"💣"</string>
    <string name="flag">"🚩"</string>
    <string name="flag_finish">"🎌"</string>
    <string name="space">" "</string>
</resources>