<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Result">

    <Space
        android:id="@+id/top_space"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defeat"
        android:textSize="64sp"
        android:gravity="center"/>

    <Space
        android:id="@+id/between_result_percent_victory_space"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/percent_victory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="36sp"
        android:gravity="center"/>

    <Space
        android:id="@+id/between1_space"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_weight="8" />

    <LinearLayout
        android:id="@+id/information_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rows"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/count_rows"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/columns"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/count_columns"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/mins"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/count_mins"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/information_layout_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/count_rows"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_value"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/count_columns"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_value"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/count_mins"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_value"
            android:textSize="20sp"/>
    </LinearLayout>

    <Space
        android:id="@+id/between2_space"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/menu_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/action_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Space
        android:id="@+id/between3_space"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</LinearLayout>