<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titlebar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/parameters_layout">

        <TextView
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="27dp"
            android:text="@string/app_name"/>

        <Button
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27dp"
            android:text="@string/begin_game"/>
    </LinearLayout>

    <GridLayout
        android:id="@+id/parameters_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlebar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:rowCount="1"
        android:columnCount="2">

        <TextView
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="27dp"
            android:text="@string/count_rows"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27dp"
            android:text="@string/count_rows"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>